# spy_game_tgbot

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
bot/: config.py  main.py  settings.py
bot/handlers/: __init__.py  command_start_handler.py  echo_handler.py
core/: config.py  main.py  settings.py
routers/: game_states.py  helpers.py
routers/base/: routes.py
routers/game_process/: helpers.py  keyboards.py  routes.py  services.py
routers/helpers/: __init__.py  feed_callback.py  game_states.py  get_bot_id.py  get_key.py  get_str_players_from_set.py  get_str_players_list.py  get_user_mention.py  process_remaining_players.py
routers/private_chats/: keyboards.py  routes.py
routers/reg_process/: routes.py  services.py
routers/reveal_process/: keyboards.py  routes.py  services.py
routers/start_game/: helpers.py  keyboards.py  routes.py  services.py  states.py
routers/vote_process/: helpers.py  keyboards.py  routes.py  services.py
utils/: find_attributes_recursively.py  get_routers.py  init_routes.py
